...
    let navigationController = UINavigationController(rootViewController: viewController)
    navigationController.modalPresentationStyle = .fullScreen
    navigationController.navigationBar.isHidden = true
    return navigationController
  }
  
  let chatToolbarView = ChatToolbarView()
  let chatTableView = UITableView()
  let chatFormView = ChatFormView()
  let chatMenuView = ChatMenuView()
  let floatingButton = UIButton(type: .custom)
  let progressView = LinearProgressView()
  var popupOptiosnMenuView: PopupOptionsMenuView?
  
  let tableViewCellFactory = ChatTableViewCellFactory()
  let filePicker = FilePickerUtils()
  
  var presenter: ChatPresenterProtocol?
  var chatRoom: ChatRoomModel?
...
