...

class ChatFormView: BaseCustomView {
  
  let strokeView = UIView()
  let menuButton = UIButton()
  let formTextView = UITextView()
  let sendButton = UIButton()
  
  let formPlaceholder = "Send a message..."
  var delegate: ChatFormViewDelegate?
  
  override init(frame: CGRect) {
    super.init(frame: frame)
...
    )
    menuButton.addTarget(self, action: #selector(menuButtonDidTapped), for: .touchUpInside)
    
    formTextView.translatesAutoresizingMaskIntoConstraints = false
    formTextView.accessibilityIdentifier = "formTextView"
    formTextView.makeFormStyle(
      identifier: "formTextField", placeholder: formPlaceholder
    )
    formTextView.autocorrectionType = .no
    formTextView.autocapitalizationType = .none
    formTextView.isEditable = true
    formTextView.isScrollEnabled = true
    formTextView.delegate = self
...
